--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "yargs": "~13.2.4"
     },
     "dependencies": {
+        "inputmask": "^5.0.3",
         "jquery": "^3.4.1",
         "smart-grid": "^2.1.2",
         "swiper": "^5.3.1"
